<?xml version="1.0"?>
<package>
  <name>dlbm_robot</name>
  <version>1.0.0</version>
  <description>Wrapper for the deep behaviour model</description>

  <author email="michal.stolarz@h-brs.de">Michal Stolarz</author>
  <maintainer email="michal.stolarz@h-brs.de">Michal Stolarz</maintainer>

  <license>GPLv3</license>

  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>

  <buildtool_depend>catkin</buildtool_depend>

  <export></export>
</package>
